<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:stretchColumns="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/userNameGroup"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">
                <TextView
                    android:id="@+id/userName_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/userName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:gravity="fill_horizontal"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:hint="@string/user_hint"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/roomNameGroup"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin">
                <TextView
                    android:id="@+id/roomId_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/room_name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/roomId"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_height="wrap_content"
                    android:gravity="fill_horizontal"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:hint="@string/room_hint"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/serverGroup"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin">
                <TextView
                    android:id="@+id/roomAddress_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/server_address"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/serverAddressId"
                    android:layout_width="fill_parent"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_height="wrap_content"
                    android:gravity="fill_horizontal"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:hint="@string/server_address_hit"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:id="@+id/resolutionGroup">
                <TextView
                    android:id="@+id/resolution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resolution"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/resolutionSp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:id="@+id/roleGroup">
                <TextView
                    android:id="@+id/clientRole"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/role"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/clientRoleSp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

            </RelativeLayout>


            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/withoutVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/withoutVideo"
                android:textColor="@color/blink_text_grey"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/join_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/rectangle_blue_button"
                android:gravity="center"
                android:text="@string/btn_start"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/blink_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/versionInfo"
                android:textColor="@color/blink_text_grey"
                android:textSize="14sp" />

        </TableLayout>
    </ScrollView>


</LinearLayout>
